tests/snapshots/run_wpt_conformance__trtx_concat_three_float32_1D_tensors_of_different_1st_dimension_along_axis_0.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "concat.https.any.js",
    "concat three float32 1D tensors of different 1st dimension along axis 0",
    "trtx",
    "PASS",
)
